<resources>
    <string name="app_name">MedTrack</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_to_medtrack">Welcome To MedTrack</string>
    <string name="enter_your_email">Enter Email</string>
    <string name="enter_your_password">Enter Password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="signup">SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_to_continue">Sign Up to Continue</string>
    <string name="display_username_here">Display Username here</string>
    <string name="go_back_button">go back button</string>
    <string name="post_button">post button</string>
    <string name="add_title">  Add Title</string>
    <string name="blog_content">blog content</string>
    <string name="start_writing">Start writing...</string>
    <string name="undo_button">Undo Button</string>
    <string name="redo_button">Redo Button</string>
    <string name="underline_button">UnderLine Button</string>
    <string name="italic_button">Italic Button</string>
    <string name="bold_button">Bold Button</string>
    <string name="add_image_button">Add Image Button</string>
    <string name="strikethrough_button">StrikeThrough Button</string>
    <string name="numbering_list_button">Numbering List Button</string>
    <string name="bullet_list_button">Bullet List Button</string>
    <string name="left_align_button">Left Align Button</string>
    <string name="right_align_button">Right Align Button</string>
    <string name="center_align_button">Center Align Button</string>
    <string name="justified_align_button">Justified Align Button</string>
    <string name="justify_align">Justify Align</string>
    <string name="block_quote_button">Block Quote Button</string>
    <string name="add_link_button">Add Link Button</string>
    <string name="div_menu_button">Div menu Button</string>
    <string name="medtrack">MedTrack</string>
    <string name="stay_on_track_stay_healthy">Stay on track, stay healthy</string>
    <string name="log_in_to_continue">Log In to Continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="active_meds">Active Meds</string>
    <string name="inactive_meds">Inactive Meds</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="major_heading">Major Heading</string>
    <string name="simple_text">Simple</string>
    <string name="minor_heading">Minor Heading</string>
    <string name="sub_heading">Sub Heading</string>
    <string name="heading">Heading</string>
    <string name="choose_headings">Choose Headings</string>
    <string name="blog_title">Blog Title</string>
    <string name="blog_description">BLog description</string>
    <string name="write_blog">Write Blog</string>

    <string name="rate_this_blog">Rate this blog</string>
    <string name="write_a_review">Write a review</string>
    <string name="ratings_and_reviews">Ratings and reviews</string>
    <string name="write_your_review_here">Write your review here...</string>
    <string name="submit">Submit</string>
    <string name="reviews">Reviews</string>
    <string name="ratings">Ratings</string>
    <string name="author">Author</string>


    <string name="which_medication_would_you_like_to_set_the_reminder_for">Which medication would you like to set the reminder for?</string>
    <string name="med_name">Name</string>
    <string name="med_next">Next</string>
    <string name="how_often_do_you_take_this_medication">How often do you take this medication?</string>
    <string name="once_daily">Once daily</string>
    <string name="twice_daily">Twice daily</string>
    <string name="interval_e_g_every_x_hours">Interval (e.g., every X hours)</string>
    <string name="specific_days_e_g_mon_wed_fri">Specific days (e.g., Mon, Wed, Fri)</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="next">Next</string>
    <string name="when_would_you_like_to_be_reminded">When would you like to be reminded?</string>
    <string name="select_time">Select Time</string>
    <string name="select">Select</string> <!-- if this changed, also update shake anim in frags-->
    <string name="quantity">Quantity</string>
    <string name="current_inventory">Current Inventory</string>
    <string name="do_you_want_to_get_reminders_to_refill_your_inventory">Do you want to get reminders to refill your inventory?</string>
    <string name="threshold_for_refill">Threshold for Refill</string>
    <string name="save">Save</string>

    <string name="intake_every">Intake every</string>
    <string name="hours">hours</string>
    <string name="starting_at">Starting at</string>
    <string name="intake_on_selected_days">Intake on [Selected Days]</string>
    <string name="time">Time</string>
    <string name="first_intake">First Intake</string>
    <string name="second_intake">Second Intake</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="back">Back</string>
    <string name="your_blogs">Your Blogs</string>
    <string name="search_blog_title">Search Blog Title...</string>

    <string name="profile_picture">Profile Picture</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="send_link">Send Link</string>


</resources>