<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
      tools:context=".activities.EditBlogAPIActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/innerlayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/bluelight"
        android:elevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004">

        <ImageButton
            android:id="@+id/btnGoBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/bluelight"
            android:clickable="true"
            android:contentDescription="@string/go_back_button"
            android:focusable="true"
            android:src="@drawable/go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvusername"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32"
            app:tint="@color/blueDark" />

        <TextView
            android:id="@+id/tvusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/display_username_here"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/composetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="Compose"
            android:textColor="@color/greytext"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvusername"
            app:layout_constraintVertical_bias="1.0"/>

        <ImageButton
            android:id="@+id/btnPost"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="281dp"
            android:layout_marginEnd="20dp"
            android:background="@color/bluelight"

            android:backgroundTint="@color/bluelight"
            android:contentDescription="@string/post_button"
            android:src="@drawable/post"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.961"
            app:layout_constraintStart_toEndOf="@+id/btnGoBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/etBlogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="100"
        android:hint="@string/add_title"
        android:layout_margin="20dp"
        android:inputType="text"
        android:textColorHint="@color/greytext"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/innerlayout"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollviewblogcontent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
     android:layout_marginTop="5dp"

        android:fillViewport="true"
     android:backgroundTint="@color/bluelight"
    app:layout_constraintBottom_toTopOf="@id/scrollviewToolbar"
    app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/etBlogTitle"
 >

    <!-- RichEditor for WYSIWYG editing -->
    <jp.wasabeef.richeditor.RichEditor
        android:id="@+id/etBlogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:maxHeight="200dp"

        android:background="@android:color/white"
        android:gravity="top"
        android:hint="@string/start_writing"
        android:inputType="textMultiLine"
        android:minLines="2"
     android:scrollbars="vertical"
    android:textColor="@android:color/black"
    android:textSize="20sp"/>
</androidx.core.widget.NestedScrollView>


<HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:id="@+id/scrollviewToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
           app:layout_constraintTop_toBottomOf="@id/scrollviewblogcontent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@color/bluelight"
            android:orientation="horizontal">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:contentDescription="@string/undo_button"
                android:id="@+id/btnUndo"

                android:src="@drawable/community_btn_undo"
                 android:backgroundTint="@color/bluelight"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:src="@drawable/community_btn_redo"
                android:contentDescription="@string/redo_button"
                android:id="@+id/btnRedo"
                android:backgroundTint="@color/bluelight"

                android:layout_marginEnd="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:id="@+id/btnAddImage"
                android:contentDescription="@string/add_image_button"
                android:backgroundTint="@color/bluelight"
                android:src="@drawable/community_btn_add_image"
                android:layout_marginEnd="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:contentDescription="@string/bold_button"
                android:backgroundTint="@color/bluelight"
                android:src="@drawable/community_btn_bold"
                android:id="@+id/btnBold"

                android:layout_marginEnd="5dp"/>

            <ImageButton
                android:id="@+id/btnItalic"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/bluelight"
                android:contentDescription="@string/italic_button"
                android:src="@drawable/community_btn_italic" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:backgroundTint="@color/bluelight"
                android:contentDescription="@string/underline_button"
                android:id="@+id/btnUnderline"
                android:src="@drawable/community_btn_underline"
                android:layout_marginEnd="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:backgroundTint="@color/bluelight"
                android:contentDescription="@string/strikethrough_button"
                android:id="@+id/btnStrikeThrough"
                android:src="@drawable/community_btn_strike_through"
                android:layout_marginEnd="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:backgroundTint="@color/bluelight"
                android:contentDescription="Color Picker"
                android:id="@+id/btnColorPicker"
                android:src="@drawable/color_picker"
                android:layout_marginEnd="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:backgroundTint="@color/bluelight"
                android:contentDescription="@string/bullet_list_button"
                android:id="@+id/btnBulletList"
                android:src="@drawable/community_btn_bullet_list"
                android:layout_marginEnd="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:backgroundTint="@color/bluelight"
                android:contentDescription="@string/bullet_list_button"
                android:id="@+id/btnNumberingList"
                android:src="@drawable/numbering_list"
                android:layout_marginEnd="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:backgroundTint="@color/bluelight"
                android:contentDescription="@string/add_link_button"
                android:id="@+id/btnAddLink"
                android:src="@drawable/community_btn_link"
                android:layout_marginEnd="5dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:backgroundTint="@color/bluelight"
                android:contentDescription="@string/div_menu_button"
                android:id="@+id/btnDiv"
                android:src="@drawable/community_btn_divmenu"
                android:layout_marginEnd="5dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:backgroundTint="@color/bluelight"
                android:src="@drawable/community_btn_left_align"
                android:contentDescription="@string/left_align_button"
                android:id="@+id/btnLeftAlign"
                android:layout_marginEnd="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:backgroundTint="@color/bluelight"
                android:contentDescription="@string/right_align_button"
                android:id="@+id/btnRightAlign"
                android:src="@drawable/community_btn_right_align"
                android:layout_marginEnd="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:backgroundTint="@color/bluelight"

                android:contentDescription="@string/center_align_button"
                android:id="@+id/btnCenterAlign"
                android:src="@drawable/community_btn_centeralign"
                android:layout_marginEnd="5dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:backgroundTint="@color/bluelight"
                android:contentDescription="@string/block_quote_button"
                android:id="@+id/btnBlockQuote"
                android:src="@drawable/community_btn_blockquote"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


