<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".activities.LoginActivity">


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/loginButtonWidth"
        android:layout_height="@dimen/loginButtonheight"
        android:layout_marginTop="@dimen/loginButtonMarginTop"
        android:layout_marginBottom="@dimen/loginButtonMarginBottom"
        android:backgroundTint="@color/blueMain"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.673" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/LogoImageWidth"
        android:layout_height="@dimen/LogoImageHeight"
        android:layout_marginTop="@dimen/LogoImageMarginTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvWelcomeToMedTrac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvWelcomeToMedTrackMarginTop"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_to_medtrack"
        android:textIsSelectable="false"
        android:textSize="@dimen/tvWelcomeToMedTrackTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/etHeight"
        android:layout_marginTop="88dp"
        android:ems="15"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/etTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeToMedTrac" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/etHeight"
        android:layout_marginTop="32dp"
        android:ems="15"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textSize="@dimen/etTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <TextView
        android:id="@+id/tvDontHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvDontHaveAnAccountMarginTop"
        android:layout_marginBottom="132dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <TextView
        android:id="@+id/tvDontHaveAnAccountSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tvDontHaveAnAccountSignUpMarginStart"
        android:layout_marginEnd="@dimen/tvDontHaveAnAccountSignUpMarginEnd"
        android:layout_marginBottom="132dp"
        android:text="@string/signup"
        android:textColorLink="@color/blueDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/tvDontHaveAnAccount"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/idSignUpToContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="47dp"
        android:text="@string/log_in_to_continue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvWelcomeToMedTrac"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="22dp"
        android:text="@string/forgot_password"
        android:textColor="@color/blueDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>