<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotPassword"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
>


    <ImageView
        android:id="@+id/logo"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:layout_width="@dimen/LogoImageWidth"
        android:layout_height="@dimen/LogoImageHeight"
        app:srcCompat="@drawable/logo" />
    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
 android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_password"
        android:textIsSelectable="false"
        android:textSize="@dimen/tvWelcomeToMedTrackTextSize"
        android:textStyle="bold"
        ></TextView>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/etHeight"
        android:ems="15"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"

        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/etTextSize"
        />

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="@dimen/loginButtonWidth"
        android:layout_height="@dimen/loginButtonheight"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"

        android:backgroundTint="@color/blueMain"
        android:text="@string/send_link"
        android:textColor="@color/white"
        tools:ignore="HardcodedText" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvDontHaveAnAccountSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:indeterminateTint="@color/blueDark"/>



</LinearLayout>